# SaaS

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: initial_schema.sql
backend/app/: config.py  main.py
backend/app/api/: data_cleaning.py  database.py  sql_generation.py  visualization.py
backend/app/core/: cleaning.py  database.py  llm.py  prompts.py  schema.py
backend/tests/: test_health.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChartView.tsx  DataCleaningPanel.tsx  ProfileDataTable.tsx  QueryEditor.tsx  ResultsTable.tsx  Sidebar.tsx
frontend/src/pages/: CleanCanvas.tsx  Connections.tsx  Home.tsx  Settings.tsx  Visualize.tsx  Workspace.tsx
